--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html lang="">
-  <head>
+<head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
+    <link rel="bookmark" href="/favicon.ico">
+    <link name="author" href="/logo.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.ts"></script>
-  </body>
+    <title>小莫唐尼</title>
+    <meta name="description" content="小莫唐尼，一个爱凑热闹，喜欢捣鼓前端的程序员！">
+    <meta name="keywords" content="小莫唐尼,小莫唐尼个人主页,个人主页">
+</head>
+<body>
+<div id="app"></div>
+<script type="module" src="/src/main.ts"></script>
+</body>
 </html>
