update: 新增消息通知

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <meta name="keywords" content="小莫唐尼,小莫唐尼个人主页,个人主页">
     <link rel="stylesheet" href="/styles/load.css">
     <script src="/libs/loading.js" type="application/javascript"></script>
+    <script src="/libs/notify.min.js" type="application/javascript"></script>
 </head>
 <body>
 
