feat: 增加打开开发者工具、调整文字和图片

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
                 </g>
             </svg>
         </div>
-        <span class="loader-text">Loading...</span>
+        <span class="loader-text">站长正在赶来，稍等噢...</span>
         <div class="background-container">
             <div class="stars"></div>
         </div>
