feat: 增加统计功能

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <link rel="stylesheet" href="/styles/load.css">
     <script src="/libs/loading.js" type="application/javascript"></script>
     <script src="/libs/notify.min.js" type="application/javascript"></script>
+    <script charset="UTF-8" id="LA_COLLECT" src="//sdk.51.la/js-sdk-pro.min.js"></script>
+    <script>LA.init({id:"KdmpYBAj5ODTuwiC",ck:"KdmpYBAj5ODTuwiC",autoTrack:true,hashMode:true})</script>
 </head>
 <body>
 
